--- a/config.toml
+++ b/config.toml
@@ -9,15 +9,15 @@ DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
 Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
-enableRobotsTXT = true
-
+enableRobotsTXT   = true
+disqusShortname = "fux-1"
 [sitemap]
   changefreq = "monthly"
   priority = 0.5
   filename = "sitemap.xml"
 
 [params]
-  favicon = ""
+  favicon = "uploads/favicon.png"
   description = ""
   facebook = ""
   twitter = ""
@@ -28,6 +28,8 @@ enableRobotsTXT = true
   linkedin = ""
   mastodon = ""
   slack = ""
+  show_date= true
+#  commentoEnable = true
   stackoverflow = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
