--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = ""
+baseURL = "/"
 languageCode = "en-us"
-title = "Fux"
+title = "Home"
 theme = "ananke"
 publishDir = "docs"
 
@@ -11,6 +11,7 @@ Paginate = 3 # this is set low for demonstrating with dummy content. Set to a hi
 googleAnalytics = ""
 enableRobotsTXT   = true
 disqusShortname = "fux-1"
+
 [sitemap]
   changefreq = "monthly"
   priority = 0.5
@@ -33,5 +34,5 @@ disqusShortname = "fux-1"
   stackoverflow = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  #featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 2
