--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ SectionPagesMenu = "main"
 Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT   = true
-disqusShortname = "fux-1"
+#disqusShortname = "fux-1"
 
 [sitemap]
   changefreq = "monthly"
